@@ -55,7 +55,7 @@ class MermaidJSPrinter(Printer):
                 args = self._get_method_arguments(func)
                 line = f"{func.name}({', '.join(args)})"
                 if func.returns:
-                    line += " -> " + get_annotation_label(func.returns)
+                    line += f" {get_annotation_label(func.returns)}"
                 body.append(line)
         name = name.split(".")[-1]
         self.emit(f"{nodetype} {name}{stereotype} {{")
