@@ -15,7 +15,7 @@ classDiagram
     my_int : Optional[int]
     my_int_2 : Optional[int]
     my_string : str
-    do_it(new_int: int) -> int
+    do_it(new_int: int) int
   }
   class Interface {
     get_value()
@@ -31,8 +31,8 @@ classDiagram
     relation2
     top : str
     from_value(value: int)
-    increment_value() -> None
-    transform_value(value: int) -> int
+    increment_value() None
+    transform_value(value: int) int
   }
   Specialization --|> Ancestor
   Ancestor ..|> Interface
