@@ -334,6 +334,10 @@ Release date: TBA
 
   Relates to #6612
 
+* Fix syntax for return type annotations in MermaidJS diagrams produced with ``pyreverse``.
+
+  Closes #6467
+
 * Fix bug where it writes a plain text error message to stdout, invalidating output formats.
 
   Closes #6597
